[package]
name = "KvPanel"
version = "0.1.0"
authors = ["moeKiwiSAMA <me@kiwi.cat>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = "0.2.11"
lazy_static = "1.4.0"
actix-web = "2"
actix-rt = "1"
actix-session = "0.3.0"
actix-files = "0.2.1"